# self-improving-coding-agent

./: .gitignore  Dockerfile.agent  README.md  docker-compose.yml  pyproject.toml
agent/: checkpoints.py  graph.py  state.py
app/: cli.py  doctor.py  main.py  run_artifacts.py
config/: api.env.example  graph.env.example  infra.env.example  llm.env.example  memory.env.example  observability.env.example  rag.env.example
db/migrations/: 001_repo_chunks.sql
docs/: 00_index.md  01_outcomes.md  02_repo_layout_execution_loop.md  03_tools_safety.md  04_memory_retrieval.md  05_observability.md  06_api_eval.md  07_llm_routing.md  08_memory_mem0.md  09_graph_neo4j.md
eval/: __init__.py  metrics.py  runner.py
llm/: __init__.py  client.py  config.py
memory/: config.py  graph_config.py  graph_store.py  mem0_client.py  store.py
observability/: __init__.py  logging.py  metrics.py  tracing.py
rag/: __init__.py  chunking.py  config.py  embeddings.py  index_meta.py  index_repo.py  lexical.py  retrieve_repo.py  types.py
rag/stores/: __init__.py  faiss_store.py  pgvector_store.py
storage/: __init__.py  db.py  eval_store.py  run_store.py  utils.py
tests/: conftest.py  test_eval_metrics.py  test_graph.py  test_graph_store.py  test_llm_client.py  test_memory_store.py  test_observability.py  test_patching.py  test_rag_faiss.py  test_rag_pgvector.py  test_sandbox.py
tools/: patching.py  run_tests.py  sandbox.py  static_audit.py  static_checks.py
